Mobile UI: overflow--issue--input-size

--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ input::placeholder{
     align-items: center;
     /*margin-top: 10px;*/
 }
+.line-and-button{
+    margin-left: 10px;
+}
 .line-and-button .line{
     flex-grow: 1;
     height: 1px;
@@ -133,7 +136,7 @@ button:hover{
         margin: 0;
     }
     .container{
-        width: 80%;
+        width: 90%;
         margin-right: 10px;
         margin-left: 10px;
         padding: 10px;
@@ -143,7 +146,7 @@ button:hover{
         width: 375px;
     }
     .inputs input{
-        width: 75px;
+        width: 89px;
     }
     #line2 {
         display: grid;
